# PyNgup-Project

./: DOCUMENTATION.htm  LICENSE  OFFICIAL LICENSE.htm  PRIVACY POLICY.htm  README.md  ngup.py  pyproject.toml  setup.bat  uninstaller.py  updater.py
api/: api.txt
asset/: asset.txt
core/: __init__.py  hash.py
docs/: LICENSE.txt  info.txt
extra/: about.txt  language.txt  log.txt
src/: i.txt  uninstaller.py  updater.py
