[tool.poetry]
name = "ngup"
description = "A Python project for XYZ"
authors = ["Kazam"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/k4zmdev/PyNgup-Project"
documentation = "DOC.htm"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pandas = "^1.2.4"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.5b1"
tox = "^3.23.0"

[tool.poetry.scripts]
ngup-cli = "ngup.cli:main"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
